feat(server)[DetailCulto]: implements reCAPTCHA verification before downloading the PDF

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Paz Church | Quixeramobim </title>
+
+  <script src="https://www.google.com/recaptcha/api.js?render=6Ld2RWgrAAAAAKUHlS0PcWSE6xlSXfIbvml7FSBU"></script>
 </head>
   <body>
     <div id="root"></div>
